--- a/AngularBomberos/angular.json
+++ b/AngularBomberos/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-bomberos",
+            "outputPath": "dist/AngularBomberos",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
